.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Headcount__c.object
<CustomObject>
    <description>Used to create time series reports</description>
    <fields>
        <fullName>xcdhcm__Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Department__c</fullName>
        <label>Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>xcdhcm__Employee_Detail__c</referenceTo>
        <relationshipName>Headcount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Headcount</label>
    <nameField>
        <label>Headcount snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Headcount</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>